# ag_network

./: .env.example  .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  Complete_Project_Plan_Agent_BD_Work_Personal.md  Cursor_Prompt_BD_Copilot_Master_Orchestrator.md  LINT_ISSUES.md  M1_eval.md  M2_COMPLETION_SUMMARY.md  M4_DEBUG_BUNDLE.md  PROTOCOL.md  README.md  RELEASE_CHECKLIST.md  preM4_additional_info.md  pyproject.toml  requirements-lock.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: hardening_task.md
.github/workflows/: ci.yml  invariants.yml
bd-copilot/: README.md  pyproject.toml
bd-copilot/src/bdcopilot/: cli.py  config.py  orchestrator.py
bd-copilot/tests/: test_models.py  test_orchestrator.py  test_skills.py
data/: ag.sqlite
data/crm_exports/: crm.db
docs/: ARCHITECTURE.md  CLI_REFERENCE.md
docs/dev/agent_handoff/: CURRENT_STATE.md  DECISIONS.md  NEXT_PR_PROMPT.md  README.md
docs/dev/backlog/: BACKLOG_INDEX.md  FINDINGS_BACKLOG.md  README.md
docs/dev/bugs/: BUG_EVIDENCE_NOT_POPULATED.md  BUG_INDEX.md  README.md
docs/dev/milestones/: PR6_COMPLETION_SUMMARY.md
docs/dev/reviews/: CLI_REVIEW_SPRINT-2026-01.md  CODE_REVIEW_NOTES.md  FINDINGS_BACKLOG.md  OBSERVABILITY_MVP_SPRINT-2026-01.md  PERFORMANCE_BASELINE_SPRINT-2026-01.md  PR1_SQLITE_INSPECTION.md  REVIEW_GUIDE.md  REVIEW_REPORT_SPRINT-2026-01.md  cli_review_checklist.md
docs/dev/sprints/: SPRINT-2026-01.md  sprint_structure_templates.md
docs/dev/team/: Cursor_Prompt_BD_Copilot_Master_Orchestrator.md  collaboration_manifest.md  (+7 more)
examples/golden_demo_von_rundstedt/: README.md  followup.json  followup.md  inputs.json  meeting_prep.json  meeting_prep.md  outreach.json  outreach.md  research_brief.json  research_brief.md  target_map.json  target_map.md
src/agnetwork/: __init__.py  cli.py  cli_labels.py  config.py  orchestrator.py  validate.py  versioning.py
tests/: conftest.py  test_cli_labels_truthfulness.py  test_cli_refactored.py  test_connectors.py  test_crm_adapters.py  test_crm_ids.py  test_crm_mapping.py  test_crm_models.py  test_crm_registry.py  test_crm_sequence.py  test_crm_storage.py  test_crm_version.py  test_executor.py  test_kernel.py  test_llm_adapters.py  test_llm_skills.py  test_llm_structured.py  test_m71_smoke.py  test_m8_deeplinks.py  test_mapping_refactored.py  test_memory.py  test_models.py  test_orchestrator.py  test_perf_baseline.py  test_pr1_storage_enforcement.py  test_pr2_cli_workspace_paths.py  test_pr3_crm_workspace_isolation.py  test_pr5_fts_workspace_scoping.py  test_sequence_templates.py  test_skills.py  test_validate.py  test_verifier.py  test_versioning.py  test_web.py  test_workspace_isolation.py
tests/golden/: test_golden_runs.py
(+138 files in other folders)
